--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/frittura-solutions/home-office-party#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "http-proxy": "^1.18.0",
     "uuid": "^7.0.2",
     "ws": "^7.2.3"
   }
